--- a/apps/news/.env
+++ b/apps/news/.env
@@ -1,5 +1,5 @@
-# MONGODB_URI=mongodb+srv://zin354:TreeGuard3549@newssearch.bevq1ur.mongodb.net/?retryWrites=true&w=majority
-MONGODB_URI=mongodb://root:password123@mongodb-primary:27017/
+MONGODB_URI=mongodb+srv://zin354:TreeGuard3549@newssearch.bevq1ur.mongodb.net/?retryWrites=true&w=majority
+# MONGODB_URI=mongodb://root:password123@mongodb-primary:27017/
 
 PORT=3000
 
